# workspace

./: .dockerignore  .editorconfig  .gitignore  All.sln  Directory.Packages.props  FicusBxes.sln  LICENSE  ProcfilerBxes.sln  Readme.md  docker-compose.monitoring.yml
.run/: readme.md
Ficus/src/rust/ficus/: Cargo.toml  build.rs
Ficus/src/rust/ficus/src/: lib.rs
Ficus/src/rust/ficus/src/event_log/: mod.rs
Ficus/src/rust/ficus/src/features/: mod.rs
Ficus/src/rust/ficus/src/grpc/: backend_service.rs  context_values_service.rs  converters.rs  events_handler.rs  get_context_pipeline.rs  kafka_service.rs  logs_handler.rs  mod.rs  pipeline_executor.rs
Ficus/src/rust/ficus/src/pipelines/: activities_parts.rs  aliases.rs  annotations_parts.rs  cases.rs  clustering.rs  context.rs  discovery_parts.rs  drawing_parts.rs  filtering_parts.rs  mod.rs  multithreading.rs  mutations_parts.rs  parts_names.rs  patterns_parts.rs  pipeline_parts.rs  pipelines.rs  util_parts.rs  xes_parts.rs
Ficus/src/rust/ficus/src/utils/: colors.rs  context_key.rs  display_name.rs  grpc_utils.rs  hash_map_utils.rs  hash_utils.rs  lcp.rs  lcs.rs  log_serialization_format.rs  mod.rs  references.rs  silhouette.rs  stream_queue.rs  vec_utils.rs  xml_utils.rs
Ficus/src/rust/ficus/tests/: mod.rs
Ficus/src/rust/ficus/tests/analysis/: analysis_tests.rs  event_log_info_tests.rs  mod.rs
Ficus/src/rust/ficus/tests/annotations/: annotation_tests.rs  mod.rs
Ficus/src/rust/ficus/tests/cases/: mod.rs  test_cases_discovery.rs
Ficus/src/rust/ficus/tests/clustering/: mod.rs  silhouette_score_tests.rs
Ficus/src/rust/ficus/tests/discovery/: alpha_nfc_plus_plus_tests.rs  alpha_tests.rs  ecfg_discovery.rs  heuristic_miner_tests.rs  lcs_discovery.rs  mod.rs  multithreaded_dfg_tests.rs  root_sequence_discovery.rs
Ficus/src/rust/ficus/tests/interval_tree/: interval_tree_tests.rs  mod.rs
Ficus/src/rust/ficus/tests/mutations/: mod.rs  mutations_tests.rs
Ficus/src/rust/ficus/tests/other/: lifecycle_tests.rs  mod.rs  mutations_tests.rs  split_tests.rs  test_simple_event_log.rs  xes_read_write_tests.rs
Ficus/src/rust/ficus/tests/petri_nets/: petri_net_tests.rs  replay_tests.rs
Ficus/src/rust/ficus/tests/pipelines/: pipeline_keys_tests.rs  pipeline_parts_tests.rs
Ficus/src/rust/ficus/tests/software_data/: extractors_tests.rs  mod.rs
Ficus/src/rust/ficus/tests/streaming/: lossy_count_tests.rs  mod.rs  sliding_window_test.rs  t1_filterers_test.rs
Ficus/src/rust/ficus/tests/suffix_tree/: suffix_tree_tests.rs
Ficus/src/rust/ficus/tests/test_core/: gold_based_test.rs  mod.rs  simple_events_logs_provider.rs  test_paths.rs
Ficus/src/rust/ficus/tests/utils/: lcp.rs  lcs.rs  mod.rs  user_data_tests.rs
Ficus/src/rust/ficus_backend/: Cargo.toml  build.rs
Ficus/src/rust/ficus_backend/src/: main.rs
Ficus/src/rust/ficus_backend/src/event_log/: mod.rs
Ficus/src/rust/ficus_backend/src/features/: mod.rs
Ficus/src/rust/ficus_backend/src/grpc/: backend_service.rs  context_values_service.rs  converters.rs  get_context_pipeline.rs  grpc_utils.rs  logs_handler.rs  mod.rs  pipeline_executor.rs
Ficus/src/rust/ficus_backend/src/pipelines/: activities_parts.rs  aliases.rs  annotations_parts.rs  context.rs  discovery_parts.rs  drawing_parts.rs  filtering_parts.rs  mod.rs  mutations_parts.rs  parts_names.rs  patterns_parts.rs  pipeline_parts.rs  pipelines.rs  util_parts.rs  xes_parts.rs
Ficus/src/rust/ficus_backend/src/utils/: colors.rs  log_serialization_format.rs  mod.rs  vec_utils.rs  xml_utils.rs
Ficus/src/rust/ficus_backend/tests/analysis/: analysis_tests.rs  event_log_info_tests.rs
Ficus/src/rust/ficus_backend/tests/discovery/: alpha_nfc_plus_plus_tests.rs  alpha_tests.rs  heuristic_miner_tests.rs
Ficus/src/rust/ficus_backend/tests/interval_tree/: interval_tree_tests.rs
Ficus/src/rust/ficus_backend/tests/other/: lifecycle_tests.rs  mod.rs  mutations_tests.rs  split_tests.rs  test_simple_event_log.rs  xes_read_write_tests.rs
Ficus/src/rust/ficus_backend/tests/petri_nets/: mod.rs  petri_net_tests.rs  replay_tests.rs
Ficus/src/rust/ficus_backend/tests/pipelines/: mod.rs  pipeline_keys_tests.rs  pipeline_parts_tests.rs
Ficus/src/rust/ficus_backend/tests/suffix_tree/: mod.rs  suffix_tree_tests.rs
Ficus/src/rust/ficus_backend/tests/test_core/: gold_based_test.rs  simple_events_logs_provider.rs
Ficus/src/rust/ficus_backend/tests/utils/: mod.rs  user_data_tests.rs
Procfiler/src/cpp/offline/: CMakeLists.txt  ClassFactory.cpp  dllmain.cpp
Procfiler/src/cpp/offline/corprofiler/: ProcfilerCorProfilerCallback.cpp  ProcfilerCorProfilerCallback.h
Procfiler/src/cpp/offline/corprofiler/objects/: ObjectsManager.cpp  ObjectsManager.h
Procfiler/src/cpp/offline/corprofiler/shadowstack/: EventsWithThreadId.cpp  EventsWithThreadId.h  ShadowStack.cpp  ShadowStack.h  utils.cpp  utils.h
Procfiler/src/cpp/online/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  dllmain.cpp
Procfiler/src/cpp/online/corprofiler/: ProcfilerCorProfilerCallback.cpp  ProcfilerCorProfilerCallback.h
Procfiler/src/cpp/online/corprofiler/eventpipe/: EventPipeWriter.cpp  EventPipeWriter.h  FunctionEvent.h
Procfiler/src/cpp/online/corprofiler/info/: AssemblyInfo.cpp  FunctionInfo.cpp  GenericMethodSignature.h  MethodSignature.cpp  TypeInfo.cpp
Procfiler/src/cpp/online/util/: util.h
bxes/src/rust/bxes/: Cargo.toml
bxes/src/rust/bxes/src/: constants.rs  lib.rs  main.rs  models.rs  type_ids.rs
bxes/src/rust/bxes/src/binary_rw/: core.rs  cursor_stream.rs  error.rs  file_stream.rs  memory_stream.rs  mod.rs
bxes/src/rust/bxes/src/models/: domain_models.rs  mod.rs  system_models.rs
bxes/src/rust/bxes/src/read/: errors.rs  mod.rs  multiple_files_bxes_reader.rs  read_context.rs  read_utils.rs  single_file_bxes_reader.rs
bxes/src/rust/bxes/src/utils/: buffered_stream.rs
bxes/src/rust/bxes/src/writer/: errors.rs  mod.rs  multiple_file_bxes_writer.rs  single_file_bxes_writer.rs  write_context.rs  writer_utils.rs
bxes/src/rust/bxes/tests/: mod.rs
bxes/src/rust/bxes/tests/multiple_files_tests/: mod.rs  test_multiple_file_reader.rs
(+2144 files in other folders)
