[package]
name = "ficus"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
quick-xml = "0.29.0"
lazycell = "1.3"
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.30.0", features = ["rt-multi-thread"] }
futures = "0.3.28"
tokio-stream = "0.1.14"
rand = "0.8.5"
nameof = "1.2.2"
once_cell = "1.18.0"
fancy-regex = "0.11.0"
stopwatch = "0.0.7"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-nn = "0.7.0"
ndarray = "0.15.6"
bxes = { path = "../../../../bxes/src/rust/bxes/" }
bxes_kafka = { path = "../../../../bxes/src/rust/bxes_kafka" }
lazy_static = "1.4.0"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
log = "0.4.25"
num-traits = "0.2.17"
approx = "0.5.1"
termgraph = "0.4.0"
getset = "0.1.5"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
derive-new = "0.7.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.9.2"
