[package]
name = "ficus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
quick-xml = "0.29.0"
lazycell = "1.3"
tonic = "0.9.2"
futures = "0.3.31"
rand = "0.8.5"
once_cell = "1.21.3"
fancy-regex = "0.11.0"
stopwatch = "0.0.7"
linfa = "0.7.1"
linfa-clustering = "0.7.1"
linfa-nn = "0.7.2"
ndarray = "0.15.6"
bxes = { path = "../../../../bxes/src/rust/bxes/" }
lazy_static = "1.5.0"
log = "0.4.29"
num-traits = "0.2.19"
approx = "0.5.1"
termgraph = "0.4.0"
getset = "0.1.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
derive-new = "0.7.0"
enum-display-derive = "0.1.1"
enum-display = "0.2.1"
paste = "1.0.15"

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
