[package]
name = "ficus_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ficus = { path = "../ficus" }
tonic = "0.14.5"
tonic-prost = "0.14.5"
colog = "1.4.0"
log = "0.4.29"
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
bxes_kafka = { path = "../../../../bxes/src/rust/bxes_kafka" }
tokio-stream = "0.1.17"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
prost = "0.14.3"
prost-types = "0.14.3"
uuid = { version = "1.19.0", features = ["v4"] }
nameof = "1.3.0"
chrono = "0.4.42"
serde_json = "1.0.148"
futures = "0.3.31"
bxes = { path = "../../../../bxes/src/rust/bxes/" }

[build-dependencies]
tonic-prost-build = "0.14.5"