[package]
name = "bxes"
version = "0.1.0"
edition = "2024"

[dependencies]
leb128 = "0.2.5"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.10.0"
tempfile = "3.24.0"
variant_count = "1.2.0"
zip = "8.1.0"
thiserror = "2.0.18"

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
debug = true
